# islam-os

./: Cargo.toml  Islam Bin El-Hassan Info.txt  LICENSE  bash.sh
scripts/: build.sh
src/ai/src/: zaka_core.rs
src/apps/browser/src/: main.rs
src/apps/payment/src/: main.rs
src/apps/video_player/src/: main.rs
src/kernel/src/: lib.rs
src/kernel/src/gui/: window.rs
src/security/src/: haris_core.rs
