[workspace]
members = [
    "src/kernel",
    "src/ai",
    "src/security",
    "src/apps/shell",
    "src/apps/browser",
    "src/apps/video_player",
    "src/apps/audio_player",
    "src/apps/payment",
    "src/libs/islam_math",
    "src/libs/islam_crypto",
    "src/libs/islam_net",
]

[workspace.package]
name = "islam-operating-system"
version = "0.1.0"
description = "نظام تشغيل إسلام - نظام تشغيل سيادي متكامل"
authors = ["إسلام بن الحسن <islamrenewaltech@gmail.com>"]
license = "GPL-3.0"
repository = "https://github.com/ai1islam1411/islam-os"
readme = "docs/README_AR.md"
edition = "2021"

[workspace.dependencies]
spin = "0.9.8"
bitflags = "2.4.0"
lazy_static = "1.4.0"
x86_64 = { version = "0.14.10", features = ["instructions"] }
volatile = "0.4.5"
linked_list_allocator = "0.10.1"
uart_16550 = "0.2.18"
pc_keyboard = "0.5.1"
vga = "0.3.0"
pic8259 = "0.10.4"
raw-cpuid = "10.6.0"
acpi = "4.2.0"
pci = "0.5.0"
rand = "0.8.5"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.49"
log = "0.4.20"
once_cell = "1.18.0"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.test]
opt-level = 0
debug = true
debug-assertions = true

[workspace.metadata]
developer = "إسلام بن الحسن - Islam Bin El-Hassan (I-H)"
company = "شركة إسلام لتجديد العلوم والتقنيات المستقبلية إسلام-إنسان"
company_english = "Islam for Scientific Renewal and Future Technologies - Islam-Insan"
address = "الحي الإفرنجي، مدينة الإسماعيلية، محافظة الإسماعيلية، مصر"
address_english = "El-Afrangi District, Ismailia City, Ismailia Governorate, Arab Republic of Egypt"
email = "islamrenewaltech@gmail.com"
phone = "+201556328989, +201508599689"
whatsapp = "+201556328989"
telegram = "@islam_developer"
github = "https://github.com/ai1islam1411"
contract = "0xa23D57f128Df2517517CA0c195C5159d81324711"
token_name = "INSAN"
min_tokens = 100
foundation_year = "2024"
hijri_year = "1448"